updated image path and assets

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
       <!-- Profile Section -->
       <div id="photo">
-        <img src="profile.jpg" alt="image">
+        <img src="./assets/profile.jpg" alt="image">
         <h3>ADITHYA</h3>
         <hr>
         <p>Driven software engineer with a passion for creating efficient and scalable solutions. Expertise in camera firmware development, object detection, and real-time video processing.</p>
